# routes/swagger.js
@@ -3,6 +3,10 @@ const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("../swagger.json");
 
 router.use("/api-docs", swaggerUi.serve);
-router.get("/api-docs", swaggerUi.setup(swaggerDocument));
+
+router.get("/api-docs", (req, res) => {
+  /* #swagger.ignore = true */
+  res.send(swaggerUi.generateHTML(swaggerDocument));
+});
 
 module.exports = router;
